gcc/testsuite/g++.dg/modules/mod++-decl-1.C
// { dg-options "-fmodules++" }

int i;

module thing; // { dg-error "expected" }
